--- a/frontend/src/Post/Post.css
+++ b/frontend/src/Post/Post.css
@@ -6,6 +6,17 @@
     padding-top: 1.1em;
 }
 
-footer {
-    padding-bottom: 1.1em;
+.vote-buttons span {
+    font-size: 0.8em;
+    margin-top: 0.5em;
+}
+
+.vote-buttons {
+    margin-bottom: 1.5em;
+}
+
+.close-btn {
+    position: absolute;
+    top: 0.1em;
+    right: 0.1em;
 }
