--- a/frontend/src/Comment/Comment.css
+++ b/frontend/src/Comment/Comment.css
@@ -2,3 +2,18 @@
     font-size: 0.8em;
     padding: 0.5em;
 }
+
+.vote-buttons span {
+    font-size: 0.8em;
+    margin-top: 0.5em;
+}
+
+.vote-buttons {
+    margin-bottom: 1.5em;
+}
+
+.close-btn {
+    position: absolute;
+    top: 0.1em;
+    right: 0.1em;
+}
