--- a/frontend/src/Post/Post.css
+++ b/frontend/src/Post/Post.css
@@ -1,5 +1,6 @@
 .card {
     margin-top: 1.1em;
+    min-width: 45%;
 }
 
 .card-text {
@@ -15,8 +16,12 @@
     margin-bottom: 1.5em;
 }
 
-.close-btn {
+.upper-buttons {
     position: absolute;
     top: 0.1em;
     right: 0.1em;
+}
+
+.upper-buttons a {
+    padding: 0.3em;
 }
